feat(api.v1): support listing tagged entities
